client/src/pages/ChatPage.css
form *:not(.input) {
  margin-bottom: 5px;
}

#chatBox {
  border: 1px solid grey;
  overflow-y: scroll;
  height: 500px;
  padding: 10px;
}

.input,
#chatBox {
  width: 800px;
  /* border: 1px solid red; */
}

.post {
  margin-bottom: 5px;
}

.post.self {
  text-align: right;
}

.post.self .msg {
  color: white;
  background-color: #7777ff;
}

.msg {
  display: inline-block;
  max-width: 70%;
  padding: 5px 10px;
  border-radius: 10px;
  background-color: #e5e5e5;
  word-wrap: break-word;
}

.post .user {
  font-size: 12px;
  margin: 0 10px;
}

small {
  text-align: center;
  display: block;
}

